# tree-sitter-purescript

./: Cargo.toml  flake.nix  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/go/: binding.go
bindings/rust/: lib.rs
grammar/: basic.js  class.js  data.js  decl.js  derive.js  exp.js  id.js  import.js  module.js  pat.js  pattern.js  rows_and_records.js  type.js  util.js
queries/: highlights.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: classes.txt  comments.txt  exp_do_ado.txt  exp_infix.txt  modules_and_imports.txt
vim_queries/: highlights.scm
