[package]
name = "tree-sitter-purescript"
description = "PureScript grammar for tree-sitter"
version = "1.0.0"
keywords = ["incremental", "parsing", "purescript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/postsolar/tree-sitter-purescript"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
    "common",
    "bindings/rust/*",
    "grammar.js",
    "src/*",
    "queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.83"
